<resources>
    <string name="app_name">DevHub</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="usernameHint">Enter username</string>
    <string name="password">Create password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="login_with_github">GITHUB</string>
    <string name="github_auth">Click on the Button below to Authenticate with Github</string>
    <string name="connectionFailure">Check your connection</string>
    <string name="RequestDenied">Request denied</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Timeline">Timeline</string>
    <string name="Notification">Notification</string>
    <string name="chat">Chat</string>
    <string name="repository">Repository</string>
    <string name="search">Search</string>
    <string name="post_image">Post Image</string>
    <string name="likeicon">LikeIcon</string>
    <string name="comment_icon">comment_icon</string>
    <string name="savepost">SavePost</string>
    <string name="edit_profile">Edit profile</string>
    <string name="temp_repno">20</string>
    <string name="temp_email">brianlinus1753@gmail.com</string>
    <string name="temp_username">Ajuogaaz</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="preferredName">Preferred Name</string>
    <string name="bioMessage">bio fhhfhfhhfh fhfhfhfhf fhffhfhfh fhfhfhf fhfhfhff fhfhfhf fhfhfhf fhfhfhf</string>
    <string name="titledescription">computer Scientist</string>
    <string name="followers">FOLLOWERS</string>
    <string name="postsLabel">POSTS</string>
    <string name="repos">REPOS</string>
    <string name="following">FOLLOWING</string>
    <string name="Ajuogaaz">\@Ajuogaaz</string>
    <string name="AjuogaazTitle">\@Ajuogaaz/SimpleInstagramClown</string>
    <string name="PostBody">D/ViewRootImpl@ce9ad29[ProfileActivity]: ViewPostIme pointer 0 D/ViewRootImpl@ce9ad29[ProfileActivity]: ViewPostIme pointer 1 D/ViewRootImpl@ce9ad29[ProfileActivity]: ViewPostIme pointer 0 D/ViewRootImpl@ce9ad29[ProfileActivity]: ViewPostIme pointer 1 D/ViewRootImpl@ce9ad29[ProfileActivity]: ViewPostIme pointer 0 D/ViewRootImpl@ce9ad29[ProfileActivity]: ViewPostIme pointer 1</string>
    <string name="upvote">Upvote</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="TimeSpent">2 hours</string>
    <string name="NumberOfUpvotes">upvotes</string>
    <string name="NumberOfComments">comments</string>
    <string name="api_key">AIzaSyB3nBqUEwfz4NtunJgiRnYyIyHNBAnJO7I</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="create_post">Create Post</string>
    <string name="post_TOOLBAR">POST</string>
    <string name="required">Required</string>
    <string name="titleFormat">\@githubUserName/githubRepositoryName</string>
    <string name="hintforCompose">whats on your mind?</string>
    <string name="post_body">Post Body</string>
    <string name="hintforComment">whats your take on the issue?</string>
    <string name="cooment_TOOLBAR">COMMENT</string>
    <string name="submitT">SUBMIT</string>
    <string name="professional_identity">Professional Identity</string>
    <string name="bio">Bio</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="signup_here">SignUp here</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login_here">login here</string>
    <string name="enter_password">Enter password</string>
    <string name="location">Location</string>
    <string name="eg_python">eg Python</string>
    <string name="datesample">7/16/2020</string>
    <string name="JobTitle">Job Title</string>
    <string name="job_type">Job Type</string>
    <string name="company_name">Company Name</string>
    <string name="job_url_link">Job Url Link</string>
    <string name="Following">Following</string>
    <string name="details">Details</string>
    <string name="repository_name">Repository Name:</string>
    <string name="repo_description">This is all about my repo</string>
    <string name="url">This is the url</string>
    <string name="kotlin">Kotlin</string>
    <string name="numberOfStars">0 stars</string>
    <string name="spaceCovered">345kb size</string>
    <string name="numberOfForks">15 forks</string>
    <string name="senior_software_developer">senior software developer</string>
    <string name="UserFollowsYou">User follows you</string>
    <string name="zero">0</string>
    <string name="follow">Follow</string>
    <string name="message">Message...</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="pick_your_current_service_provider">Integrate with your provider</string>
    <string name="github">GITHUB</string>
    <string name="bitbucket">BITBUCKET</string>
    <string name="gitlab">gitlab</string>
    <string name="professionhint">Profession eg Computer Scientist</string>
    <string name="whats_your_level_of_experience_eg_junior">Whats your level of experience eg Junior</string>
    <string name="submit">SUBMIT</string>
    <string name="save_preference">Save preference</string>
</resources>