<androidx.cardview.widget.CardView
    android:id="@+id/particularPost"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height='wrap_content'
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    card_view:cardBackgroundColor="@color/colorWhite"
    card_view:cardCornerRadius="30dp"
    card_view:cardElevation="8dp">


    <!-- Main Content View -->
    <RelativeLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tvCreatedAt"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/Black"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/TimeSpent"
            tools:text="@string/TimeSpent"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:textColor="@color/Black"
            android:layout_below="@id/tvCreatedAt"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:autoLink="all"
            android:typeface="sans"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:text="@string/AjuogaazTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_below="@id/title"
            android:layout_marginTop="5dp"
            android:typeface="sans"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:autoLink="all"
            android:text="@string/PostBody"
            />
        <ImageView
            android:id="@+id/PostImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/tvDescription"
            android:src="@color/Green"
            android:visibility="visible"
            android:scaleType="centerCrop"
            android:contentDescription="@string/post_image"
            android:background="@android:color/transparent"
            />


        <TextView
            android:id="@+id/tvActualLikes"
            android:layout_below="@id/PostImage"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp"
            android:textColor="@color/Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/NumberOfUpvotes"
            />

        <TextView
            android:id="@+id/tvActualComments"
            android:layout_below="@id/PostImage"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:textColor="@color/Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/NumberOfComments"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
