<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ComposeActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarContainer"
            >

            <ImageView
                android:id="@+id/Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cancel"
                app:srcCompat="@drawable/ic_close" />

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_post"
                android:textColor="@color/Black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_centerInParent="true"
                />

            <TextView
                android:id="@+id/toolbarPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_TOOLBAR"
                android:textColor="@color/Black"
                android:layout_marginEnd="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
               android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>


</RelativeLayout>