<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterEmail"
        android:layout_marginTop="190dp"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_email_address"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/colorAccent"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxStrokeColor="@color/colorAccent"
        android:theme="@style/TextInputLayoutStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:textColor="@color/Black"
            android:inputType="textEmailAddress"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterUserName"
        android:layout_below="@id/enterEmail"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/usernameHint"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/colorAccent"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxStrokeColor="@color/colorAccent"
        android:theme="@style/TextInputLayoutStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:textColor="@color/Black"
            android:inputType="textMultiLine"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterPassword"
        android:layout_below="@id/enterUserName"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:hint="@string/enter_password"
        app:endIconMode="password_toggle"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/colorAccent"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxStrokeColor="@color/colorAccent"
        android:theme="@style/TextInputLayoutStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:textColor="@color/Black"
            android:inputType="textPassword"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_Login"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterPassword"
        android:layout_margin="10dp"
        android:elevation="10dp"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:clickable="true"
        android:textColor="@color/Black"
        android:textSize="12sp"
        app:backgroundTint="@color/colorAccent"
        android:focusable="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:layout_alignParentBottom="true">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/Black"
            android:textSize="12sp"
            android:text="@string/have_an_account"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/Blue"
            android:textSize="12sp"
            android:layout_toEndOf="@id/intro"
            android:text="@string/login_here"/>


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/repos_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />

</RelativeLayout>

